--- a/Practica3/FranquiciasUCMain/pom.xml
+++ b/Practica3/FranquiciasUCMain/pom.xml
@@ -26,4 +26,33 @@
   		<version>0.0.1-SNAPSHOT</version>
     </dependency>
   </dependencies>
+  
+  <build>
+      <plugins>
+		  <plugin>
+			  <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-assembly-plugin</artifactId>
+			  <version>3.4.2</version>
+			  <configuration>
+			      <descriptorRefs>
+				      <descriptorRef>jar-with-dependencies</descriptorRef>
+				  </descriptorRefs>
+			      <archive>
+				      <manifest>
+					      <mainClass>es.unican.is2.franquiciasuc.main.Runner</mainClass>
+					  </manifest>
+				  </archive>
+			  </configuration>
+			  <executions>
+			      <execution>
+				      <id>make-assembly</id>
+					  <phase>package</phase>
+					  <goals>
+					      <goal>single</goal>
+					  </goals>
+			  	  </execution>
+			  </executions>
+		  </plugin>
+	  </plugins>
+  </build>
 </project>
